Profile page styling and slick sidebar, body height/sidebar overflow fixes.

--- a/newspaper_site/newspaper_app/static/newspaper_app/css/style.css
+++ b/newspaper_site/newspaper_app/static/newspaper_app/css/style.css
@@ -13,6 +13,17 @@ body {
     margin: 0;
     background-color: #646C79;
     font-family: 'Noto Sans', Arial, sans-serif;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar{
+    background: inherit;
+    width:5px;
+}
+::-webkit-scrollbar-thumb{
+    background:#FB9039; 
+    border-radius: 5px;
+    border: 1px solid #1F3044;
 }
 
 hr {
@@ -24,6 +35,10 @@ hr {
 .container, .badge.badge-custom {
     background-color: #1F3044 !important;
 }
+
+/* .container {
+    min-height: 100vh;
+} */
 
 .text-style, .card-subtitle {
     font-family: 'Bebas Neue', cursive;
@@ -37,12 +52,12 @@ hr {
     border-radius: 0px 0px 10px 10px;
 }
 
-.nav-item.btn:hover {
+.nav-item.btn:hover, .bg-pic-btn:hover {
     filter: brightness(.8);
 }
 
 /* ################################ HEADING OVERRIDES*/
-.span-4 {
+.span-left {
     color: #FB9039;
 }
 
@@ -51,7 +66,7 @@ hr {
 }
 
 /* ################################ INDEX CARDS*/
-.card.stretched-link, .card {
+.card {
     background-color: #fffafa;
 }
 
@@ -70,4 +85,22 @@ a, a:hover {
 
 a:hover .card-title{
     color: #FB9039 !important;
+}
+
+/* ################################ PROFILE OVERRIDES*/
+.img-custom {
+    background-color: #FB9039 !important;
+    border: 1px solid #1F3044 !important;
+}
+
+.bg-picture {
+    background-color: #1F3044;
+}
+
+.bg-pic-btn {
+    background-color: #FB9039 !important;
+}
+
+.fa-pen-square, .fa-trash {
+    color: #1F3044;
 }
